# Capstone

./: .gitignore  Anchor.toml  README.md  architecture_design.md  capstone_idea.md  env.template  index.js  metadata_examples.md  package-lock.json  package.json  pnpm-workspace.yaml  project_status.md  recru_search_architecture.md  tsconfig.json  use_stories_assignment  user_stories.md  user_stories_assignment.md
.next/: trace
app/utils/: encryption.ts  ipfs-config.ts
migrations/: deploy.ts
programs/: Turbin3-wallet.json
programs/recru_search/: Cargo.toml  RecruSearchConsentNFT.json
programs/recru_search/src/: lib.rs
programs/recru_search/src/instructions/: admin.rs  consent.rs  data_management.rs  data_submission.rs  eligibility_criteria.rs  mod.rs  queries.rs  rewards.rs  study.rs
programs/recru_search/src/state/: accounts.rs  constants.rs  errors.rs  events.rs  mod.rs
recru_search/: .gitignore  ARCHITECTURE_DIAGRAMS_DRAWIO.xml  Anchor.toml  package-lock.json  package.json  test-wallet.json  tsconfig.json
recru_search/diagrams/: 00_protocol_initialization_flowchart.xml  00_recrusearch_overview.xml  01_protocol_initialization.xml  01_study_management_flowchart.xml  02_study_management.xml  02_study_management_integrated.xml  03_consent_management.xml  03_consent_management_flowchart.xml  03_consent_management_flowchart_final.xml  03_consent_management_flowchart_simple.xml  03_consent_management_integrated.xml  04_data_submission_flowchart.xml  05_reward_management.xml  05_reward_management_flowchart.xml  (+3 more)
tests/: helpers.ts  recru_search.ts
(+51 files in other folders)
