[package]
name = "recru_search"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "recru_search"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
mpl-core = "0.10.1"

[dev-dependencies]
solana-logger = "2.3.1"
solana-program-test = "2.3.6"
solana-sdk = "2.3.1"
spl-token = "7.0.0"

